force-app/main/default/objects/ESS_Hotel_SAP__c.object
<CustomObject>
    <fields>
        <fullName>CIDate__c</fullName>
        <label>CIDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CODate__c</fullName>
        <label>CODate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_No__c</fullName>
        <label>Document No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HotelBookingId__c</fullName>
        <label>HotelBookingId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HotelKey__c</fullName>
        <label>HotelKey</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HotelType__c</fullName>
        <label>HotelType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonnelNo__c</fullName>
        <label>PersonnelNo</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoomNo__c</fullName>
        <label>RoomNo</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Message__c</fullName>
        <label>SAP Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SendingToSAP</fullName>
                    <label>Sending To SAP</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>Success</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>Error</label>
                </value>
                <value>
                    <fullName>W</fullName>
                    <label>Warning</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>Info</label>
                </value>
                <value>
                    <fullName>A</fullName>
                    <label>Abort</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ESS Hotel SAP</label>
    <listViews>
        <fullName>All</fullName>
        <columns>HotelBookingId__c</columns>
        <columns>Document_No__c</columns>
        <columns>NAME</columns>
        <columns>PersonnelNo__c</columns>
        <columns>HotelKey__c</columns>
        <columns>CIDate__c</columns>
        <columns>CODate__c</columns>
        <columns>HotelType__c</columns>
        <columns>RecordId__c</columns>
        <columns>RoomNo__c</columns>
        <columns>Status__c</columns>
        <columns>SAP_Message__c</columns>
        <columns>Created_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HSAP-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>